adding melmacian's Underscore.strings to the Links section of the docs

--- a/index.html
+++ b/index.html
@@ -1128,6 +1128,13 @@ _([1, 2, 3]).value();
         The <a href="http://github.com/mirven/underscore.lua">source</a> is
         available on GitHub.
       </p>
+      
+      <p>
+        <a href="http://esa-matti.suuronen.org/projects/underscore.strings/">Underscore.strings</a>,
+        an Underscore extension that adds functions for string-manipulation: 
+        <tt>trim</tt>, <tt>startsWith</tt>, <tt>contains</tt>, <tt>capitalize</tt>,
+        <tt>reverse</tt>, <tt>sprintf</tt>, and more.
+      </p>
 
       <p>
         Ruby's <a href="http://ruby-doc.org/core/classes/Enumerable.html">Enumerable</a> module.
