Aliasing _.contains to _.include

--- a/index.html
+++ b/index.html
@@ -356,6 +356,7 @@ _.any([null, 0, 'yes', false]);
 
       <p id="include">
         <b class="header">include</b><code>_.include(list, value)</code>
+        <span class="alias">Alias: <b>contains</b></span>
         <br />
         Returns <i>true</i> if the <b>value</b> is present in the <b>list</b>, using
         <i>===</i> to test equality. Uses <b>indexOf</b> internally, if <b>list</b>
